fix:add flex wrap

--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -7,6 +7,7 @@
 .container{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     width: 1000px;
     height: 80%;
     margin: 0 auto;
